Added option to hide/show the code to YML. Added column breaks and style choices to Expanded Abbreviations Mess

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ format:
     theme: cosmo
     number-sections: false
     css: styles.css
+    code-fold: true
+    code-summary: "show the code"
 
   pdf:
     documentclass: scrreprt
