--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,7 +22,11 @@ format:
   html:
     theme: cosmo
     number-sections: false
+    toc: false
     css: styles.css
+    grid:
+      sidebar-width: 200px
+      margin-width: 300px
     code-fold: true
     code-summary: "show the code"
 
