--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,14 @@ book:
     - chapter1.qmd
     - chapter2.qmd
     - chapter3.qmd
-    - chapter4.qmd
+    - chapter4-Intro.qmd
+    - chapter4-T-A.qmd
+    - chapter4-T-B.qmd
+    - chapter4-T-C.qmd
+    - chapter4-T-D.qmd
+    - chapter4-T-E.qmd
+    - chapter4-T-F1.qmd
+    - chapter4-T-F2.qmd
     - conclusion.qmd
     - references.qmd
 
