Changed formatting on homepage to be more of a title pagge; Created a separate page for the Abstract; Created an images folder to store the brat and sheep images

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,10 +4,11 @@ project:
 
 book:
   title: "The Life of Saint Mary the Egyptian: A Digital Critical Edition of the Old French Version T with English Translations"
-  author: "Loren Lee"
-  date: "02/09/2025"
+  author: "Loren Easterday Lee"
+  date: "02/11/2025"
   chapters:
     - index.qmd
+    - abstract.qmd
     - acknowledgements.qmd
     - intro.qmd
     - chapter1.qmd
