Added chapter4-2.qmd to show the The Portraits with added visualizations; Renamed chapter4.qmd to chapter4-1.qmd, which shows the Portraits and translations without added visualizations

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,8 @@ book:
     - chapter1.qmd
     - chapter2.qmd
     - chapter3.qmd
-    - chapter4.qmd
+    - chapter4-1.qmd
+    - chapter4-2.qmd
     - appendix-T-A.qmd
     - appendix-T-B.qmd
     - appendix-T-C.qmd
