Added an introduction to the appendix; Added digitization links to T-A, T-D, T-E, T-F1 & T-F2 and clearer comments in code for all appendix pages; Edited heading text for Portraits page to clarify T-F1's absence; Added detailed explanation of Portraits w/ Viz page; Changed colors for portrait viz to be more vision-friendly and added a key;

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,7 @@ book:
     - chapter3.qmd
     - chapter4-1.qmd
     - chapter4-2.qmd
+    - appendix-intro.qmd
     - appendix-T-A.qmd
     - appendix-T-B.qmd
     - appendix-T-C.qmd
