Re-numbered chapter structure

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ book:
     - chapter2-2.qmd
     - portraits.qmd
     - portraits-viz.qmd
-    - chapter2-3.qmd
+    - chapter3.qmd
     - conclusion.qmd
     - appendix1.qmd
     - appendix2-intro.qmd
