Updated dissertation title based on Amy's April feedback

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,9 +3,9 @@ project:
   output-dir: docs
 
 book:
-  title: "The Life of Saint Mary the Egyptian: A Digital Critical Edition of the Old French Version T with English Translations"
+  title: "The Life of Saint Mary the Egyptian: Toward a Digital Critical Edition of the Old French Version T with English Translations"
   author: "Loren Easterday Lee"
-  date: "03/27/2025"
+  date: "04/22/2025"
   chapters:
     - index.qmd
     - abstract.qmd
