Added married name to homepage; changed "poitrine" special character in v.643 T-E to &#x030D;

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 book:
   title: "The Life of Saint Mary the Egyptian: Toward a Digital Critical Edition of the Old French Version T with English Translations"
   author:
-    - name: "Loren Easterday Lee"
+    - name: "Loren Easterday Lee Cantrell"
       affiliation: 
         name: "Department of French, University of Virginia"
   date: "09/15/2025"
