Added Figures page (still need to work out best method for cross referencing between list and figures)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ book:
   date-format: long
   chapters:
     - index.qmd
+    - figures.qmd
     - abstract.qmd
     - acknowledgements.qmd
     - intro.qmd
